@@ -70,7 +70,7 @@ public class RevokeCitizenAccessHandler implements PreSubmitCallbackHandler<Asyl
                 + " caseId: " + caseId);
         }
 
-        deleteRoleAssignment(roleAssignmentResource.getRoleAssignmentResponse().get(0).getId());
+        deleteRoleAssignment(roleAssignmentResource.getRoleAssignmentResponse().getFirst().getId());
         asylumCase.read(NLR_DETAILS, NonLegalRepDetails.class)
             .ifPresent(nlrDetails -> {
                 if (nlrDetails.getIdamId().equals(idamId)) {
